@@ -3391,7 +3391,7 @@ GMP_FINISH
 
 AC_OUTPUT(Makefile							\
   mpbsd/Makefile mpf/Makefile mpn/Makefile mpq/Makefile			\
-  mpz/Makefile printf/Makefile scanf/Makefile cxx/Makefile		\
+  mpz/Makefile printf/Makefile scanf/Makefile rand/Makefile cxx/Makefile \
   tests/Makefile tests/devel/Makefile tests/mpbsd/Makefile		\
   tests/mpf/Makefile tests/mpn/Makefile tests/mpq/Makefile		\
   tests/mpz/Makefile tests/rand/Makefile tests/misc/Makefile		\
